--- a/start/package.json
+++ b/start/package.json
@@ -10,13 +10,17 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "node": "^21.0.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.18.6",
+    "@types/node": "^18.19.28",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/tsconfig": "^0.4.0",
